--- a/video/index.html
+++ b/video/index.html
@@ -47,6 +47,10 @@
       <div class="video-container">
         <h1>Video</h1>
         <div class="card">
+          <iframe class="visual" src="https://www.youtube.com/embed/-s8Xh4VSxpA" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="caption"><i>Emily Hansel Dance Reel</i></div>
+        <div class="card">
           <iframe class="visual" src="https://www.youtube.com/embed/uJ4H6y7Gza8?showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="caption"><i>PHANTOM (2019)</i><br><small>Directed, choreographed, and performed by Emily Hansel</small></div>
