--- a/photo/index.html
+++ b/photo/index.html
@@ -43,20 +43,25 @@
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/4.png"></a></div>
       <h1 id="photo">Photo</h1>
-      <div class="media-container photo-container">
+      <div class="photo-container">
         <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 266 }">
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/11.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/10.jpg" data-action="zoom" data-caption="2018 | Photograph by Stephen Texeira"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/12.jpg" data-action="zoom" data-caption="&lt;i&gt;Point of Dissolve&lt;/i&gt; | 2017 | Photograph for The Anata Project courtesy of Meets the Eye Studios"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/2.jpg" data-action="zoom" data-caption="&lt;i&gt;Threshold&lt;/i&gt; | 2015 | Choreography by Andrew Carroll | Photograph by Kyle Scharf"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/4.jpg" data-action="zoom" data-caption="&lt;i&gt;Cause&lt;/i&gt; | 2016 | Choreography by Robert Moses | Photograph by Kyle Scharf"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/5.jpg" data-action="zoom" data-caption="&lt;i&gt;Fingerprints&lt;/i&gt; | 2016 | Choreography by Paula Nunez | Photograph by Kyle Scharf"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/7.jpg" data-action="zoom" data-caption="&lt;i&gt;KOTO&lt;/i&gt; | 2015 | Choreography by Alonzo King | Photrograph by Kyle Scharf"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/9.jpg" data-action="zoom" data-caption="&lt;i&gt;3:00am&lt;/i&gt; | 2014/2016 | Choreography by Andrew Carroll | Photograph by Candace Kaw/Soho Images"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/carousel/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
         </div>
       </div>
-      <div class="caption"></div>
+      <div class="full-screen-caption"></div>
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
