--- a/photo/index.html
+++ b/photo/index.html
@@ -45,20 +45,20 @@
       <h1 id="photo">Photo</h1>
       <div class="photo-container">
         <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 266 }">
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="2016 | Photograph by Jason Lam"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="The Exceptionally Elderly Overweight Black Man Phoenix | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="BIG SALT | Photograph by Summer Wilson for The Anata Project | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="Belong Not | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="Roaratorio | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="Biped | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="Simple Symphony | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="Concerto Grosso | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="The Exceptionally Elderly Overweight Black Man Phoenix | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="Point of Dissolve | Photograph for The Anata Project courtesy of Meets the Eye Studios | 2017"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="Photograph by Jason Lam | 2016"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="KOTO | Choreography by Alonzo King | Photograph by Kyle Scharf | 2015"></div>
         </div>
       </div>
       <div class="full-screen-caption"></div>
