--- a/photo/index.html
+++ b/photo/index.html
@@ -51,6 +51,7 @@
           <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="Roaratorio | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
           <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="Biped | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
           <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="Simple Symphony | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
+          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="BIG SALT | Photograph by Summer Wilson for The Anata Project | 2019"></div>
           <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="Concerto Grosso | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
           <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019"></div>
           <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="The Exceptionally Elderly Overweight Black Man Phoenix | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
