--- a/videos/index.html
+++ b/videos/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Media</title>
+    <title>Emily Hansel | Videos</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/index.css">
@@ -45,7 +45,7 @@
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/5.png"></a></div>
       <div class="video-container">
-        <h1>Video</h1>
+        <h1>Videos</h1>
         <div class="card">
           <iframe class="visual" src="https://www.youtube.com/embed/-s8Xh4VSxpA" frameborder="0" allowfullscreen></iframe>
         </div>
