--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
-        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
-        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
+        <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
+        <div class="nav-item"><a class="site-link" href="/videos" alt="videos">videos</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
@@ -59,8 +59,8 @@
         </div>
         <div class="menu-item"><span class="menu-button"> galleries</span>
           <ul class="sub-menu">
-            <li><a class="site-link" href="/photo" alt="photo">photo</a></li>
-            <li><a class="site-link" href="/video" alt="video">video</a></li>
+            <li><a class="site-link" href="/photos" alt="photos">photos</a></li>
+            <li><a class="site-link" href="/videos" alt="videos">videos</a></li>
           </ul>
         </div>
         <div class="menu-item"><span class="menu-button contact">contact</span></div>
