--- a/photos/index.html
+++ b/photos/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Media</title>
+    <title>Emily Hansel | Photos</title>
     <link rel="stylesheet" href="../assets/css/index.css">
   </head>
   <body>
@@ -42,7 +42,7 @@
     </div>
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/4.png"></a></div>
-      <h1 id="photo">Photo</h1>
+      <h1 id="photo">Photos</h1>
       <div class="photo-container">
         <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 266 }">
           <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
