--- a/photos/index.html
+++ b/photos/index.html
@@ -26,8 +26,8 @@
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
-        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
-        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
+        <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
+        <div class="nav-item"><a class="site-link" href="/videos" alt="videos">videos</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
       </div>
     </div>
@@ -42,24 +42,26 @@
     </div>
     <div class="media">
       <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/4.png"></a></div>
-      <h1 id="photo">Photos</h1>
       <div class="photo-container">
-        <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 266 }">
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="&lt;i&gt;Belong Not&lt;/i&gt; | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="&lt;i&gt;Roaratorio&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="&lt;i&gt;Biped&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="&lt;i&gt;Simple Symphony&lt;/i&gt; | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="&lt;i&gt;Concerto Grosso&lt;/i&gt; | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="&lt;i&gt;Point of Dissolve&lt;/i&gt; | Photograph for The Anata Project courtesy of Meets the Eye Studios | 2017"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="Photograph by Jason Lam | 2016"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="&lt;i&gt;KOTO&lt;/i&gt; | Choreography by Alonzo King | Photograph by Kyle Scharf | 2015"></div>
-          <div class="grid-item"><img src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
+        <div class="x">
+          <h1 id="photo">Photos</h1>
+          <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 266 }">
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="&lt;i&gt;Belong Not&lt;/i&gt; | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/4.jpg" data-action="zoom" data-caption="&lt;i&gt;Roaratorio&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/5.jpg" data-action="zoom" data-caption="&lt;i&gt;Biped&lt;/i&gt; | Choreography by Merce Cunningham | Photograph by Hillary Goidell | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/6.jpg" data-action="zoom" data-caption="&lt;i&gt;Simple Symphony&lt;/i&gt; | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/7.jpg" data-action="zoom" data-caption="&lt;i&gt;Concerto Grosso&lt;/i&gt; | Choreography by Mark Foehringer | Photograph by Matt Haber | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/8.jpg" data-action="zoom" data-caption="Photograph by Edward Michael for the Anata Project | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/9.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/10.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/11.jpg" data-action="zoom" data-caption="Photograph by Stephen Texeira | 2018"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/12.jpg" data-action="zoom" data-caption="&lt;i&gt;Point of Dissolve&lt;/i&gt; | Photograph for The Anata Project courtesy of Meets the Eye Studios | 2017"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/13.jpg" data-action="zoom" data-caption="Photograph by Jason Lam | 2016"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/14.png" data-action="zoom" data-caption="&lt;i&gt;KOTO&lt;/i&gt; | Choreography by Alonzo King | Photograph by Kyle Scharf | 2015"></div>
+            <div class="grid-item"><img src="../assets/img/dancing/masonry/6.5.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
+          </div>
         </div>
       </div>
       <div class="full-screen-caption"></div>
