use fitWidth masonry option

--- a/photos/index.html
+++ b/photos/index.html
@@ -45,7 +45,7 @@
       <div class="photo-container">
         <div class="x">
           <h1 id="photo">Photos</h1>
-          <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 316 }">
+          <div class="grid js-masonry" data-masonry="{ &quot;itemSelector&quot;: &quot;.grid-item&quot;, &quot;columnWidth&quot;: 316, &quot;fitWidth&quot;: true }">
             <div class="grid-item"><img src="../assets/img/dancing/masonry/1.jpg" data-action="zoom" data-caption="&lt;i&gt;The Exceptionally Elderly Overweight Black Man Phoenix&lt;/i&gt; | Choreography by Robert Moses | Photograph by Jim Coleman | 2019"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/2.jpg" data-action="zoom" data-caption="&lt;i&gt;BIG SALT&lt;/i&gt; | Photograph by Summer Wilson for The Anata Project | 2019"></div>
             <div class="grid-item"><img src="../assets/img/dancing/masonry/3.jpg" data-action="zoom" data-caption="&lt;i&gt;Belong Not&lt;/i&gt; | Choreography by Chuck Wilt for Post:Ballet | Photograph by Alexander Reneff-Olson | 2020"></div>
