--- a/photos/index.html
+++ b/photos/index.html
@@ -79,6 +79,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="../assets/js/carousel.js"></script>
     <script src="../assets/js/zoom.js"></script>
     <script>sessionStorage.seen = true;</script>
