add fourbyfour/ask page and tweak stuff

--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
       <h4>Dancer</h4>
       <h4>Choreographer</h4>
       <ul class="menu">
-        <div class="menu-item"><span class="menu-button">about</span>
+        <div class="menu-item"><span class="menu-button" tabindex="0">about</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/bio" alt="bio">bio</a></li>
             <li><a class="site-link" href="/assets/resume.pdf" target="_blank" alt="resume">resume</a></li>
           </ul>
         </div>
-        <div class="menu-item"><span class="menu-button">works</span>
+        <div class="menu-item"><span class="menu-button" tabindex="0">works</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
             <li><a class="site-link" href="/digital-art" alt="digital art statement">digital art</a></li>
           </ul>
         </div>
-        <div class="menu-item"><span class="menu-button"> galleries</span>
+        <div class="menu-item"><span class="menu-button" tabindex="0"> galleries</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/photos" alt="photos">photos</a></li>
             <li><a class="site-link" href="/videos" alt="videos">videos</a></li>
           </ul>
         </div>
-        <div class="menu-item"><span class="menu-button contact">contact</span></div>
+        <div class="menu-item"><span class="menu-button contact" tabindex="0">contact</span></div>
         <div class="menu-item"><span class="menu-button"><a href="https://www.instagram.com/em_hansel/" target="_blank" rel="noreferrer noopener">
               <ion-icon name="logo-instagram"></ion-icon></a></span></div>
         <div class="dancing-image"></div>
