--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
     <title>Emily Hansel</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/index.css?v=1">
   </head>
   <body>
     <div class="nav-opener">
@@ -80,7 +80,7 @@
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/index.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app.js?v=1"></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </body>
 </html>
