--- a/videos/index.html
+++ b/videos/index.html
@@ -15,7 +15,7 @@
     <title>Emily Hansel | Videos</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
     <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/index.css?v=1">
   </head>
   <body>
     <div class="nav-opener">
