lots of progress

--- a/fourbyfour/video.html
+++ b/fourbyfour/video.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Digital Art</title>
+    <title>Emily Hansel | Four by Four | Ask</title>
     <link rel="stylesheet" href="../assets/css/index.css?v=2">
   </head>
   <body>
@@ -40,12 +40,22 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="home-button"><a href="/" alt="Emily"><img src="../assets/img/dancing/crop/3.png"></a></div>
-    <div class="rightImage"><img src="../assets/img/insatiable.png"></div>
     <div class="body-container bio">
-      <div class="bio-container digital-art-container no-animation">
-        <h1>Digital Art</h1><br><br><br>
-        <p>Coming soon</p>
+      <div class="bio-container no-animation">
+        <div class="heading"> 
+          <h1>Four by Four — Video</h1>
+        </div>
+        <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
+        <p>This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
+        <p>How much would you like to pay to access the <i>Four by Four</i> film?</p>
+        <ul> 
+          <li> <a href="" target="_blank">$0  </a></li>
+          <li> <a href="" target="_blank">$5</a></li>
+          <li> <a href="" target="_blank">$10</a></li>
+          <li> <a href="" target="_blank">$15</a></li>
+          <li> <a href="" target="_blank">$20</a></li>
+          <li> <a href="" target="_blank">$25</a></li>
+        </ul>
       </div>
     </div>
     <script>
