--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -41,9 +41,9 @@
       </form>
     </div>
     <div class="body-container bio">
+      <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="600px"></a></h1>
       <div class="bio-container no-animation">
         <div class="heading"> 
-          <h1>Four by Four</h1>
           <p> 
             <ul>
               <li>May 26-28, 2022</li>
@@ -52,10 +52,11 @@
               <li>Thursday, May 26 at 7:00 pm</li>
               <li>Friday, May 27 at 7:00 pm</li>
               <li>Saturday, May 28 at 4:00 pm</li>
-            </ul>
-          </p><a href="">
-            <button>Buy tickets</button></a>
+            </ul><a href="">
+              <button>Buy tickets</button></a>
+          </p>
         </div>
+        <div class="image-bar"> <img src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan dancing"><img src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong"><img src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert dancing"><img src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington"></div>
         <p>Choreographed by Emily Hansel and co-created by dancers Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert, <i>Four by Four</i> is a messy attempt at refusing productivity. Since beginning work in November 2021, the artists have been practicing the radical act of not knowing. They’ve been fighting their capitalist tendencies, taking their time, embracing messiness, and prioritizing adaptability. <i>Four by Four</i>, featuring original music composed by Sophia Cotraccia and Bed Juodvalkis and lighting design by Thomas Bowersox, is a contemporary dance that is simultaneously light-hearted, serious, ordinary, and one-of-a-kind.</p>
         <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.</p>
         <p>Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket.</p>
