adjust image title

--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="body-container bio">
-      <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="600px"></a></h1>
+      <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
         <div class="heading"> 
           <p> 
