--- a/fourbyfour/audio.html
+++ b/fourbyfour/audio.html
@@ -43,16 +43,16 @@
     <div class="body-container bio">
       <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
-        <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
-        <p>This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
-        <p>How much would you like to pay to access the <i>Four by Four</i> film?</p>
+        <p>An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.</p>
+        <p>This audio description is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
+        <p>How much would you like to pay to access the <i>Four by Four</i> audio description?</p>
         <ul class="button-group"><a href="" target="_blank"> 
-            <button>$0  </button></a><a href="" target="_blank">
-            <button> $5</button></a><a href="" target="_blank">
-            <button>$10</button></a><a href="" target="_blank">
-            <button> $15</button></a><a href="" target="_blank">
-            <button>$20</button></a><a href="" target="_blank">
-            <button>$25</button></a></ul>
+            <button tabindex="-1">$0  </button></a><a href="" target="_blank">
+            <button tabindex="-1"> $5</button></a><a href="" target="_blank">
+            <button tabindex="-1">$10</button></a><a href="" target="_blank">
+            <button tabindex="-1"> $15</button></a><a href="" target="_blank">
+            <button tabindex="-1">$20</button></a><a href="" target="_blank">
+            <button tabindex="-1">$25</button></a></ul>
       </div>
     </div>
     <script>
