better mobile stuff

--- a/fourbyfour/ask.html
+++ b/fourbyfour/ask.html
@@ -40,7 +40,7 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="body-container bio new-page">
+    <div class="body-container bio">
       <div class="bio-container no-animation">
         <p>
           Hello respected colleagues and friends,
