--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -40,7 +40,7 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="body-container bio new-page">
+    <div class="body-container bio">
       <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
         <div class="heading"> 
