--- a/fourbyfour/audio.html
+++ b/fourbyfour/audio.html
@@ -40,7 +40,7 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="body-container bio new-page">
+    <div class="body-container bio">
       <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
         <p>An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.</p>
