--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -52,7 +52,7 @@
               <li>Thursday, May 26 at 7:00 pm</li>
               <li>Friday, May 27 at 7:00 pm</li>
               <li>Saturday, May 28 at 4:00 pm</li>
-            </ul><a href="">
+            </ul><a href="https://odc.secure.force.com/ticket/?_ga=2.234779421.2098805509.1649436505-1909123880.1600909191#/events/a0S5b00000BXZzNEAX">
               <button tabindex="-1">Buy tickets</button></a>
           </p>
         </div>
