--- a/fourbyfour/video.html
+++ b/fourbyfour/video.html
@@ -46,12 +46,12 @@
         <p>A film version of <i>Four by Four</i> will be available on-demand July 1-31, 2022. This video will include open captions in English. You will be emailed instructions for accessing the film on or before July 1, 2022.</p>
         <p>This film is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
         <p>How much would you like to pay to access the <i>Four by Four</i> film?</p>
-        <ul class="button-group"><a href="" target="_blank"> 
-            <button>$0  </button></a><a href="" target="_blank">
-            <button> $5</button></a><a href="" target="_blank">
-            <button>$10</button></a><a href="" target="_blank">
-            <button> $15</button></a><a href="" target="_blank">
-            <button>$20</button></a><a href="" target="_blank">
+        <ul class="button-group"><a href="https://www.google.com/url?q=https://docs.google.com/forms/d/e/1FAIpQLScqS1OaKyi67SjiSAvNPPkVx23l4p-tiMQ4Bw4SirBB2UqKrg/viewform?usp%3Dsf_link&amp;sa=D&amp;source=docs&amp;ust=1650136235800495&amp;usg=AOvVaw1nENQ3nAwH8MUnQmh-6Ot6" target="_blank"> 
+            <button>$0  </button></a><a href="https://buy.stripe.com/6oE8xTcXcfy6bPGbIJ" target="_blank">
+            <button> $5</button></a><a href="https://buy.stripe.com/eVa5lH1eudpYf1SfZ0" target="_blank">
+            <button>$10</button></a><a href="https://buy.stripe.com/dR63dzcXc99If1SdQT" target="_blank">
+            <button> $15</button></a><a href="https://buy.stripe.com/9AQ4hD8GWclU9HyeUY" target="_blank">
+            <button>$20</button></a><a href="https://buy.stripe.com/6oE29v4qG99Ig5W6ot" target="_blank">
             <button>$25</button></a></ul>
       </div>
     </div>
