--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
@@ -48,7 +48,9 @@
             <ul>
               <li>May 26-28, 2022</li>
               <li>ODC Theater</li>
-              <li>San Francisco, CA</li><br>
+              <li>San Francisco, CA</li>
+            </ul>
+            <ul>
               <li>Thursday, May 26 at 7:00 pm</li>
               <li>Friday, May 27 at 7:00 pm</li>
               <li>Saturday, May 28 at 4:00 pm</li>
