--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="body-container bio">
-      <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
+      <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
         <div class="heading"> 
           <p> 
@@ -58,7 +58,12 @@
               <button tabindex="-1">Buy tickets</button></a>
           </p>
         </div>
-        <div class="image-bar"> <img src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity."><img src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side."><img src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side."><img src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs."></div>
+        <div class="image-bar"> 
+          <div class="image-hover"><img src="../../assets/img/fourbyfour/shareen.jpg" alt="Shareen DeRyan, wearing turquoise and maroon, places her hands in the air with specificity." tabindex="0"></div>
+          <div class="image-hover"><img src="../../assets/img/fourbyfour/mia.jpg" alt="Mia J. Chong, wearing shades of blue, bands over straight legs and reaches one arm straight to the side." tabindex="0"></div>
+          <div class="image-hover"><img src="../../assets/img/fourbyfour/chelsea.jpg" alt="Chelsea Reichert, wearing purple, twists her arms and torso while her braid swings out to the opposite side." tabindex="0"></div>
+          <div class="image-hover"><img src="../../assets/img/fourbyfour/alex.jpg" alt="Alex Carrington, wearing red, curls and twists her arms and legs." tabindex="0"></div>
+        </div>
         <p>Choreographed by Emily Hansel and co-created by dancers Alex Carrington, Mia J. Chong, Shareen DeRyan, and Chelsea Reichert, <i>Four by Four</i> is a messy attempt at refusing productivity. Since beginning work in November 2021, the artists have been practicing the radical act of not knowing. They’ve been fighting their capitalist tendencies, taking their time, embracing messiness, and prioritizing adaptability. <i>Four by Four</i>, featuring original music composed by Sophia Cotraccia and Bed Juodvalkis and lighting design by Thomas Bowersox, is a contemporary dance that is simultaneously light-hearted, serious, ordinary, and one-of-a-kind.</p>
         <p><i>Four by Four</i> is made possible by contributions from the California Arts Council, ODC Theater’s Rental Discount Initiative, Steppin’ Out Dance Studio, and RoundAntennae.</p>
         <p>Tickets are available at a variety of price points and no one will be turned away for lack of funds. Ticket buyers are encouraged to consider their economic status when deciding which tickets to purchase. If price is a barrier for you, please email <a href="mailto:emily@emilyhansel.me" target="_blank">emily@emilyhansel.me</a> to receive a complimentary ticket.</p>
