--- a/fourbyfour/audio.html
+++ b/fourbyfour/audio.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Four by Four | Ask</title>
+    <title>Emily Hansel | Four by Four | Audio</title>
     <link rel="stylesheet" href="../assets/css/index.css?v=2">
   </head>
   <body>
@@ -23,7 +23,7 @@
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
@@ -41,7 +41,7 @@
       </form>
     </div>
     <div class="body-container bio">
-      <h1><a href="/fourbyfour"><img class="hero" src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
+      <h1 class="hero"><a href="/fourbyfour"><img src="../../assets/img/fourbyfour/title.png" alt="Four by Four" width="96%"></a></h1>
       <div class="bio-container no-animation">
         <p>An English audio description of the <i>Four by Four</i> film will be available on-demand July 1-31, 2022. You will be emailed instructions for accessing the audio description on or before July 1, 2022.</p>
         <p>This audio description is available at a variety of price points and patrons are encouraged to consider their economic status when deciding which price to pay.</p>
