--- a/fourbyfour/index.html
+++ b/fourbyfour/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Four by Four | Ask</title>
+    <title>Emily Hansel | Four by Four</title>
     <link rel="stylesheet" href="../assets/css/index.css?v=2">
   </head>
   <body>
@@ -23,7 +23,7 @@
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
