--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
@@ -48,7 +48,7 @@
         <div class="menu-item"><span class="menu-button" tabindex="0">about</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/bio" alt="bio">bio</a></li>
-            <li><a class="site-link" href="/assets/resume.pdf" target="_blank" alt="resume">resume</a></li>
+            <li><a class="site-link" href="/assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></li>
           </ul>
         </div>
         <div class="menu-item"><span class="menu-button" tabindex="0">works</span>
