--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
+        <div class="nav-item"><a class="site-link" href="/fourbyfour" alt="Four by Four art">Four by Four</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
         <div class="nav-item"><a class="site-link" href="/videos" alt="videos">videos</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
@@ -54,7 +54,7 @@
         <div class="menu-item"><span class="menu-button" tabindex="0">works</span>
           <ul class="sub-menu">
             <li><a class="site-link" href="/choreography" alt="choreography">choreography</a></li>
-            <li><a class="site-link" href="/digital-art" alt="digital art statement">digital art</a></li>
+            <li><a class="site-link" href="/fourbyfour" alt="Four by Four">Four by Four</a></li>
           </ul>
         </div>
         <div class="menu-item"><span class="menu-button" tabindex="0"> galleries</span>
