--- a/pug/_main_template.html
+++ b/pug/_main_template.html
@@ -23,7 +23,7 @@
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
         <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
+        <div class="nav-item"><a class="site-link" href="/fourbyfour" alt="Four by Four art">Four by Four</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
         <div class="nav-item"><a class="site-link" href="/videos" alt="videos">videos</a></div>
         <div class="nav-item"><span class="contact">contact</span></div>
